--- a/src/main/webapp/resources/css/table.css
+++ b/src/main/webapp/resources/css/table.css
@@ -11,6 +11,15 @@
     height: 40px;
 }
 
+.tbl > thead > tr {
+    background-color: slategray;
+}
+
+.tbl > tbody td > a {
+    text-decoration: none;
+    color: black;
+}
+
 .title {
     width: 50%;
     margin: 0 auto;
@@ -26,5 +35,19 @@
     text-align: center;
 }
 
+.tbl2 {
+    width: 70%;
+    margin: 0px auto;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
 
+.tbl2 > thead > tr {
+    background-color: black;
+    color: white;
+}
+
+.tbl2 > tbody > tr > td {
+    border-bottom: 1px solid black;
+}
 
