--- a/src/main/webapp/resources/css/table.css
+++ b/src/main/webapp/resources/css/table.css
@@ -42,9 +42,19 @@
     border-collapse: collapse;
 }
 
+.tbl2 th, .tbl2 td {
+    border: 1px solid black;
+    height: 40px;
+}
+
 .tbl2 > thead > tr {
     background-color: black;
     color: white;
+}
+
+.tbl2 > tbody td > a {
+    text-decoration: none;
+    color: brown;
 }
 
 .tbl2 > tbody > tr > td {
