--- a/src/main/webapp/resources/css/table.css
+++ b/src/main/webapp/resources/css/table.css
@@ -12,7 +12,8 @@
 }
 
 .tbl > thead > tr {
-    background-color: slategray;
+    background-color: black;
+    color: white;
 }
 
 .tbl > tbody td > a {
@@ -21,11 +22,11 @@
 }
 
 .title {
-    width: 50%;
+    width: 30%;
     margin: 0 auto;
 }
 
-.iu2 {
+.image {
     width: 50%;
     margin: 0 auto;
 }
@@ -37,14 +38,9 @@
 
 .tbl2 {
     width: 70%;
-    margin: 0px auto;
+    margin: 0 auto;
     border-spacing: 0;
     border-collapse: collapse;
-}
-
-.tbl2 th, .tbl2 td {
-    border: 1px solid black;
-    height: 40px;
 }
 
 .tbl2 > thead > tr {
@@ -52,12 +48,10 @@
     color: white;
 }
 
-.tbl2 > tbody td > a {
-    text-decoration: none;
-    color: brown;
-}
-
 .tbl2 > tbody > tr > td {
     border-bottom: 1px solid black;
 }
 
+.tbl2 th, .tbl2 td {
+    border: 3px solid white;
+}
